Fixed state bug and button center alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,8 @@
 .body {
+  display: flex;
   background-color: white;
+  align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0px 36px;
 }
